Formatting and documentation
1. Update the formatting using code's auto-formatting feature.
2. Add documentation to classes.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿@model IEnumerable<NASCARTeams.Models.Team>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">NASCAR Teams Online Database</h1>
     @{
         var teamCount = Model.Count();
     }
     @if (teamCount == 0)
     {
-        <p>There are no teams in the database.</p>
+        <p>There are no teams in the database. <a asp-controller="NASCARTeams" asp-action="Create">Create a team.</a></p>
     }
     else if (teamCount==1) {
-        <p>There is <a asp-action="View">one</a> team in the database.</p>
+        <p>There is <a asp-action="View">one team</a> in the database.</p>
     }
     else
     {
-        <p>There are <a asp-controller="NASCARTeams">@teamCount</a> teams in the database.</p>
+        <p>There are <a asp-controller="NASCARTeams">@teamCount teams</a> in the database.</p>
     }
 </div>
